--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <h1><img src="images/brand.png" alt="brand" id="brandImg"></h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <button id="close-image"><img src="images/home.png">Log in</button>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+  <img class="phonesImg" src="images/phones.png" alt="Phones">
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="main">
 
-  &copy; 2014 Instagram
+    <h2>Capture and Share<br> the World's Moments</h2>
+
+    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life
+      with friends and family.
+
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+      easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+      Oh yeah, did we mention it's free?
+
+      Download on the App Store
+      Get it on Google Play</p>
+  </div>
+
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy Terms </li>
+      <span>&copy; 2014 Instagram</span>
+    </ul>
+  </footer>
 </body>
+
 </html>
