--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header id="header">
+  </header>
+  <section id="section">
+    <div class="">
+        <img class="phone" src="images/phones.png" alt="">
+        <div class="container">
+          <div class="brand">
+              <img class="imagem-brand" src="images/brand.png" alt="">
+              <div class="brand-caixa">
+                <img class="brand-casa" src="images/home.png" alt="">
+                <p class="brand-texto"><a href="#">Log in</a></p>
+              </div>
+            </div>
+            <div class="caixa">
+              <div>
+                <h2>Capture and Share the World's Moments</h2>
+                <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p>  Oh yeah, did we mention it's free?</p>
+              </div>
+              <div class="imagens-badge">
+                <img src="images/badge-iphone.png" alt="">
+                <img src="images/badge-android.png" alt="">
+              </div>
+            </div>
+        </div>
+    </div>
+  </section>
+  <footer id="footer">
+    <ul class="lista">
+      <li><a href="">About Us</a></li>
+      <li><a href="">Support</a></li>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Press</a></li>
+      <li><a href="">API</a></li>
+      <li><a href="">Jobs</a></li>
+      <li><a href="">Privacy</a></li>
+      <li><a href="">Terms</a></li>
+      <li id="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
