--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="top">
 
-  Capture and Share the World's Moments
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div id="imagemCelular">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  </div>
+  <div id="logo-botao">
+  <button><img src="images/home.png" id="img-home"/><span id="logb"> &nbsp Log in</span></button>
+  </div>
+ <div id="info-insta">
 
-  Oh yeah, did we mention it's free?
+ <div id="fundo">
 
-  Download on the App Store
-  Get it on Google Play
+  <h1>Capture and Share &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp the World's Moments</h1>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <article>
+  <p>
+  Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+</p>
+<p>
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. 
+  You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+ <p>
+    Oh yeah, did we mention it's free?
+ </p>
+</p>
+</article>
+<div id="stores">
+  <img src="images/badge-iphone.png">
+  <img src="images/badge-iphone.png">
+</div>
+</div>
+</div>
 
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>  Terms</li>
+
+  <li id="copyr">&copy; 2014 Instagram</ul></footer>
 </body>
 </html>
