add hello world

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <h1>Hello World</h1>
   <header></header>
   <section class="container">
     <img class="img" src="./images/phones.png" alt=" Iphone Logo">
