--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,36 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 <body>
 
-  <section class="phones">
-    <div >
-      <img src="images/phones.png" alt="phones" >
-    </div>
+<!--
+  <section class="section-bground">
   </section>
-  <section class="brand-text">
-    <img src="images/brand.png" alt="brand">
-    <img src="images/home.png" alt="home">
-    <article>
-      <h2>Instagram</h2>
+  <-->
+  <section id="brand-text">
+      <div id="phones" ></div>
+      <div id="logo"></div> 
+      <div id="logging"></div>
 
-      <p>Capture and Share the World's Moments Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>  way to share your life </p> 
+      
+    <article>
+      <h3>Capture and Share the World's Moments</h3> 
+      <p> Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>  way to share your life </p> 
       <p>with friends and family.</p>
       <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
         Oh yeah, did we mention it's free?</p>
     </article>
+    </div>
 
+   
+    <img name="apple"> 
+    <img name="android">
     
-    <button name="button" ><img src="images/badge-iphone.png" alt="Submit"></button>
-    <button name="button"><img src="images/badge-android.png" alt="Submit"></button>
-
   </section>
   
 </body>
