--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
   <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <link href="css/main.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <!--Blue background-->
+    <div class="fundo">
+      <div>
+          <img class="phones" src="images/phones.png" alt="Phones">
+      </div>
+      <!--Phone-->
+      <div>
+        <img src="images/brand.png" class="img-brand" alt="Brand">
+        <!--Home Button-->
+        <a class="lnk-btn-login" href="#"><img src="images/home.png" class="img-login">Log in</a>
+      </div>
+    </div>
 
-  Capture and Share the World's Moments
+  <!--Image and text-->  
+  <section>
+    <div class="img-frame">
+      <div>
+        <h2>Capture and Share <br> the World's Moments</h2>
+      </div>
+      <div>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life<br> with friends and family.
+        </p>
+        <p>Take a picture or video, choose a filter to transform its look<br> and feel, then post to Instagram &mdash; it's that easy. You can<br> even share to Facebook, Twitter, Tumblr and more. It's a<br> new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+    </div>
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<!--Button link-->
+  <div class="lnk-app">
+    <img src="images/badge-iphone.png" class="lnk-ios" alt="iPhone">
+    <img src="images/badge-android.png" class="lnk-android" alt="Android">
+  </div>
+</div>
+  
+  <footer>
+    <ul class="footer-list">
+      <li class="footer">About Us</li>
+      <li class="footer">Support</li>
+      <li class="footer">Blog</li>
+      <li class="footer">Press</li>
+      <li class="footer">API</li>
+      <li class="footer">Jobs</li>
+      <li class="footer">Privacy</li>
+      <li class="footer">Terms</li>
+      <li class="corporate">&copy; 2014 Instagram</li>
+ 
+  </footer>
+  
 </body>
 </html>
