Instagam done with Gui

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link href="css/main.css" rel="stylesheet" type="text/css">
+
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class="page">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div id="mockup">
+      <img src="images/phones.png">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="info">
 
-  Oh yeah, did we mention it's free?
+          <div class="top">
 
-  Download on the App Store
-  Get it on Google Play
+            <div id="logo">
+                <a href="#"><img src="images/brand.png" alt="Só vem!"></a>
+            </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+            <div id="login">
+            <img src="images/home.png">
+            <a href="#">Log In</a>
+            </div>
 
-  &copy; 2014 Instagram
+          </div>
+          
+        <div id="content">
+
+          <h1>Capture and Share<br>the World's Moments</h1>
+
+          <article>
+          <p >Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
+          It's a new way to see the world.<br><br>Oh yeah, did we mention it's free?</p>
+          </article>
+
+          </div>
+
+          <div class="download">
+            <img src="images/badge-iphone.png">
+            <img src="images/badge-android.png">
+          </div>
+
+
+
+      </div>
+
+      <div class="footer">
+          <a href="">About Us</a>
+          <a href="">Support</a>
+          <a href="">Blog</a>
+          <a href="">Press</a>
+          <a href="">API</a>
+          <a href="">Jobs</a>
+          <a href="">Privacy</a>
+          <a href="">Terms</a>
+          &copy; 2014 Instagram
+      </div>  
+
+  </div>
 </body>
 </html>
