--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -11,42 +11,45 @@
     <div class = "container">
       <div class = "phone">
         <img class = "logo" src = "./images/phones.png" alt = "Intagram">
-      </div>
+        </div>
+
       <div class ="homeLogo">
         <div class ="header">
           <img src = "./images/brand.png" alt = "Intagram">
-          <div class = "button-login">
-            <a href= " # "><img src = "./images/home.png" alt = "home'><span> Log in</span></a>
-          </div>
+          <button class = "button-login">
+            <a href= "#"><img src = "./images/home.png" alt = "home">
+              <span> Log in</span></a>
+            </button>
         </div>
-        <div class = "content">
+        <div class = "content-wrap">
+          <div class = "content">
             <h1>Capture and Share</br>the World's Moments</h1>
 
             <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
             <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-
             <p>Oh yeah, did we mention it's free?</p>
 
             <img src="./images/badge-iphone.png" alt = "Dowload on the App store">
             <img src="./images/badge-android.png" alt = "Get it on Google Play">
+            </div>
+          </div>
+        </div>
+
+  
+      <div class = "footer">
+        <ul class = "menu-botton">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><span class="copy">&copy; 2014 Instagram</span></li>
+        </ul>
+        </div>
       </div>
     </div>
-  </div>
-  
-<div class = "footer">
-  <ul>
-    <li><a href="#">About Us</a></li>
-    <li><a href="#">Support</a></li>
-    <li><a href="#">Blog</a></li>
-    <li><a href="#">Press</a></li>
-    <li><a href="#">API</a></li>
-    <li><a href="#">Jobs</a></li>
-    <li><a href="#">Privacy</a></li>
-    <li><a href="#">Terms</a></li>
-    <li><span class="copy">&copy; 2014 Instagram</span></li>
-  </ul>
-</div>
-</div>
-
 </body>
 </html>
