--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <title>Instagram</title>
+ <title>Instagram</title>
+ <link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
+
+
 <body>
-  <div class="container">
-  <img src="images/bgtile.png" class="imginfo" alt="">
-  <img src="images/brand.png" class="brand" alt="">
-  
-  <div class="frame">Log in</div>
 
-  <img src="images/phones.png" class="phones" alt="">
-  <img src="images/home.png" class="login" alt="">
+ <div class="back"></div>
 
-  <div class="rbox"><h3>Capture and Share the World's Moments</h3>
-  <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.<br><br>
+ <div class="container">
+   <div class="image">
+     <img src="images/phones.png" alt="phones-image">
+   </div>
+   <div class="content">
+     <div class="title">
+         <img src="images/brand.png" alt="instagram-logo">
+         <a class="homebutton" href="#"><img src="images/home.png">Log in</a>
+     </div>
+     <div class="textmain">
+         <header>
+             <h1>Capture and Share the World's Moments</h1>
+         </header>
+         <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+         <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
 
-  Oh yeah, did we mention it's free?
-  <img src="images/badge-iphone.png" class="appbutton" alt="">
-  <img src="images/badge-android.png" class="appbutton" alt="">
 
-</p><br></div> 
+         <img src="images/badge-android.png" alt="Download on the AppStore">
+         <img src="images/badge-iphone.png" alt="Get it on Google Play">
+     </div>
 
-  
-  <br>
-  
-  
-  <div class="footer">
-  About Us Support Blog Press API Jobs Privacy Terms
-  </div>
-  <div class="copyright"><p>&copy;2014 Instagram</p></div>
-</div>
+
+   </div>
+   <div class="clearfix"></div>
+   <footer>
+       <ul>
+       <li>About Us</li>
+       <li>Blog</li>
+       <li>Press</li>
+       <li>API</li>
+       <li>Jobs</li>
+       <li>Jobs</li>
+       <li>Jobs</li>
+        &copy; 2014 Instagram
+    </ul>
+   </footer>
+
+
+
+
+ </div>
 </body>
 </html>
