Finished a pre-release project

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <main class="main">
+    <div class="section side-image">
+      <img src="images/phones.png" alt="Instagram on mobile phones">
+    </div>
+    <div class="section actions">
+      <div class="nav">
+        <div class="brand">
+          <h1><a href="index.html"><img src="images/brand.png" alt="Instagram brand"></a></h1>  
+        </div>
+        <div class="login">
+          <a class="btn login-button"><img src="images/home.png" alt=""><span>Log in</span></a>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+      <section class="description-box">
+        <div class="description">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="downloads">
+          <div class="platform">
+            <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+          </div>
+          <div class="platform">
+            <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </section>
+    </div>
+    <div class="clearfix"></div>
+  </main>
+  <footer class="footer">
+    <nav class="nav">
+      <ul class="related-links">
+        <li class="list-item"><a class="item-link" href="#">About Us</a></li>
+        <li class="list-item"><a class="item-link" href="#">Support</a></li>
+        <li class="list-item"><a class="item-link" href="#">Blog</a></li>
+        <li class="list-item"><a class="item-link" href="#">Press</a></li>
+        <li class="list-item"><a class="item-link" href="#">API</a></li>
+        <li class="list-item"><a class="item-link" href="#">Jobs</a></li>
+        <li class="list-item"><a class="item-link" href="#">Privacy</a></li>
+        <li class="list-item"><a class="item-link" href="#">Terms</a></li>
+      </ul>
+      <div class="copyright">
+        <span>&copy; 2014 Instagram</span>
+      </div>
+    </nav>
+  </footer>
 </body>
 </html>
