--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,8 +4,23 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div>
+    <img src="images/bgtile.png">
+  </div>
 
+  <div>
+    <img src="images/phones.png">
+  </div>
+
+  <div>
+    <img src="images/brand.png">
+  </div>
+
+  <div>
+    <button type="submit">Log in></button>
+  </div>
+
+  <section>
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
@@ -14,18 +29,25 @@
 
   Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+  <ul>
+    <li><img src="images/badge-iphone.png"></li>
+    <li><img src="images/badge-android.png"></li>
+  </ul>
+  </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</il>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+      </lu>
+  </footer>>
 
-  &copy; 2014 Instagram
 </body>
 </html>
