--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,38 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css" type="text/css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="header-shadow">
+    <div class="inline-div">
+      <div>
+        <img src="./images/phones.png" alt="">
+      </div>
+      <div class="brand_margin">
+        <div class="inline-brand">
+          <div><img src="./images/brand.png" alt=""></div> <div><img class="button-login" src="./images/home.png" alt=""><a class="button-text" href="#">    Log In</a></div>
+        </div>
+        <div class="capture-text">
+          <h2 class="head_padding">Capture and Share <br> the World's Moments</h2>
+          <p class="text_padding">Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p class="text_padding">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p class="text_padding">Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="buttons_padding"><img src="./images/badge-iphone.png" alt=""><img class="button_margin" src="./images/badge-android.png" alt=""></div>
+      </div>
+    </div>
+    <div class="links_padding">  
+        <a class="links" href="#">About Us</a>
+        <a class="links" href="#">Support</a>
+        <a class="links" href="#">Blog</a>
+        <a class="links" href="#">Press</a>
+        <a class="links" href="#">API</a>
+        <a class="links" href="#">Jobs</a>
+        <a class="links" href="#">Privacy</a>
+        <a class="links" href="#">Terms</a>      
+        <a class="links link_silver" href="#">&copy; 2014 Instagram</a>
+    </div>
+  </div>
 </body>
 </html>
