--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <main>
+      <aside>
+        <img src="images/phones.png" alt="Phones using Instagram app" />
+      </aside>
+      <content>
+        <header>
+          <img src="images/brand.png" alt="Instagram" />
+          <button><img src="images/home.png" alt="" />Log in</button>
+        </header>
+        <div class="content-card">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="download">
+            <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+            <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+          </div>
+        </div>
+      </content>
+    </main>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
