Clone almost completed

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
   <div>
-    <img src="images/bgtile.png">
+    <img class="back-img" src="images/bgtile.png">
   </div>
 
-  <div>
-    <img src="images/phones.png">
+  <div class="phones">
+      <img src="images/phones.png">
   </div>
 
-  <div>
+  <div class="logo">
     <img src="images/brand.png">
   </div>
 
-  <div>
-    <button type="submit">Log in></button>
+  <div class="btn">
+    <button>
+        <img src="images/home.png">
+        Log in
+    </button>
   </div>
 
-  <section>
-  Capture and Share the World's Moments
+  <div class="text">
+    <article>
+    <h1>Capture and Share<br>
+      the World's Moments</h1>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Instagram is a fast, beautiful and fun way to share your life<br>
+      with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <p>Take a picture or video, choose a filter to transform its look<br>
+      and feel, then post to Instagram &mdash; it's that easy. You can<br>
+      even share to Facebook, Twitter, Tumblr and more. It's a<br>
+      new way to see the world.
 
-  Oh yeah, did we mention it's free?
+    <p>Oh yeah, did we mention it's free?</p>
+    </article>
 
-  <ul>
-    <li><img src="images/badge-iphone.png"></li>
-    <li><img src="images/badge-android.png"></li>
-  </ul>
-  </section>
+    <ul class="download-but">
+      <li><img src="images/badge-iphone.png"></li>
+      <li><img src="images/badge-android.png"></li>
+    </ul>
+  </div>
 
-  <footer>
+  <footer class="about">
     <ul>
       <li>About Us</li>
       <li>Support</li>
@@ -43,11 +57,11 @@
       <li>Press</li>
       <li>API</li>
       <li>Jobs</li>
-      <li>Privacy</il>
+      <li>Privacy</li>
       <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
-      </lu>
-  </footer>>
+      <li><span>&copy; 2014 Instagram</span></li>
+    </ul>
+  </footer>
 
 </body>
 </html>
