[MAD-PP] Alberto González

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header>
+    <img src="./images/bgtile.png" width="100%" height="90%">
+  </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section>
+    <div class="phone">
+      <img src="./images/phones.png" width="100%">  
+    </div>
+  
+    <div class="texto">
+      <div class="cabecera">
+        <img src="./images/brand.png" width="300px">
+        <button class="boton"><img src="./images/home.png" width="30px"> Log in </button>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="textoContent">
+          <h2>Capture and Share<br> the World's Moments</h2>
+          <p>           
+              Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
+              <br>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+              Oh yeah, did we mention it's free?
+              Download on the App Store
+              <br><br>
+              Get it on Google Play
+          </p>
+      </div>
 
-  Oh yeah, did we mention it's free?
+      <div class="contentImg">
+        <img src="./images/badge-android.png" alt="apple">
+        <img src="./images/badge-iphone.png" alt="iphone">
+      </div>
+       
+    </div>
+  </section>
+ 
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+    
+  </footer>
 </body>
 </html>
