--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <meta charset="UTF-8">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <section class="caja1">
+
+  
 
   Capture and Share the World's Moments
 
@@ -17,15 +21,28 @@
   Download on the App Store
   Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </section>
+  <div class="picture">
+    <img src="./images/phones.png" alt="phones">
+  </div>
+  <section class="main-text">
+    <div class="title">
+      <img src="./images/brand.png" alt="brand">
+      <h1>Instagram</h1>
+    </div>
+  </section>
+  <footer>
+    <ul class="list">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a class="copy" href="#">&copy; 2014 Instagram</a></li>
+    </ul>
+  </footer>
 </body>
 </html>
