--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <title>Instagram</title>
+      </head>
 <body>
-  Instagram
+  <div class="blueline"></div>
+  <div class="updivphone">
+    <img src="images/phones.png">
+  </div>
+  <div class="updivtext">
+    <div>
+      <img class="flotar" src="images/brand.png">
+      <div class="flotar but">
+        <img class="butimg" src="images/home.png">
+        <p class="login">Log in</p>
+      </div>
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="white">
+      <h3>Capture and Share<br> the World's Moments</h3>
+      <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
+  </div>
+  
+<footer class="foot">
+  <ul>
+    <li>ABOUT US</li>
+    <li>SUPPORT</li>
+    <li>BLOG</li>
+    <li>PRESS</li>
+    <li>API</li>
+    <li>JOBS</li>
+    <li>PRIVACY</li>
+    <li>TERMS</li>
+  </ul>
+  <p class="brand">&copy; 2014 INSTAGRAM</p>
+</footer>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
 </body>
 </html>
