--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,70 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href='./css/main.css'>
 </head>
 <body>
-  Instagram
+  <header>
+    <img src="./images/bgtile.png" alt="header image" width="100%" height="50%"> 
+  </header>
+  <section>
+    <div class="phone">
+      <img src="./images/phones.png" height="100%">
+    </div>
+      <div class="texto">
+        <div class="cabecera">
+          <div class="Instalogo">
+            <img src="./images/brand.png" width="50%" height="50%">
+          </div>
+          <div class="loginBox">
+            <button class="loginButton">
+              <img src="./images/home.png">
+              log in
+            </button>
+          </div>
+        </div>
+        <div class="frame">
+          <div>
+            <h2 class="tittle">
+              Capture and Share <br> the World's Moments
+            </h2>
+            <p class="maintext">
+              Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
 
-  Capture and Share the World's Moments
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+              Oh yeah, did we mention it's free?
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              Download on the App Store
+              Get it on Google Play
+            </p>
+          </div>
+          <div>
+            <div class="IOS">
+              <img src="./images/badge-iphone.png">
+            </div>
+            <div class="Android">
+              <img src="./images/badge-android.png">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
 </html>
