--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,9 +21,9 @@
   </div>
 
   <div class="btn">
-    <button>
+    <button class="btn-btn">
         <img src="images/home.png">
-        Log in
+      Log in
     </button>
   </div>
 
@@ -32,7 +32,7 @@
     <h1>Capture and Share<br>
       the World's Moments</h1>
 
-    <p>Instagram is a fast, beautiful and fun way to share your life<br>
+    <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br>
       with friends and family.</p>
 
     <p>Take a picture or video, choose a filter to transform its look<br>
