--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,65 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<div class="container"> 
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="section sectLeft">
+    <img src="./images/phones.png" alt="Phones">
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="section sectRight">
 
-  Oh yeah, did we mention it's free?
+    <div class="logoLogin">
+      <div class="logo">
+        <img src="./images/brand.png" alt="Instagram Logo">
+      </div>
+      <button type="button" class="loginButton">
+        <img src="./images/home.png" alt="House login button">
+        <span>Log in</span>
+      </button>
+    </div>
+    <div class="clear"></div>
 
-  Download on the App Store
-  Get it on Google Play
+    
+    <div class="article">
+      <h2>Capture and Share <br> the World's Moments</h2>
+      <div>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  &copy; 2014 Instagram
+        <p>Oh yeah, did we mention it's free?</p>
+      </div>
+    </div>
+    
+    <div class="buttonBagde">
+      <img src="images/badge-iphone.png" alt="Apple store link">
+      <img id="badgeAndroid" src="images/badge-android.png" alt="Google play link">  
+    </div>
+
+  </div> 
+
+  <div class="clear"></div>
+
+</div>
+
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer> 
 </body>
 </html>
