--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div>
+    <div id="phones">
+        <img src="images/phones.png">
+    </div>
+    <div id="content">
+      <div id="login">
+        <img src="images/brand.png">
+        <button>
+          <img src="images/home.png"><span>Log in</span>
+        </button>
+      </div>
+      <div id="frame">
+        <div id="text">
+          <h2>Capture and Share <br> the World's Moments</h2>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+      </div>
+      <div id="apps">
+        <img src="images/badge-iphone.png" alt="">
+        <img id="android" src="images/badge-android.png" alt="">
+      </div>
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li>&copy; 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
 </body>
 </html>
