--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,10 @@
       </div>
       <div class="brand_margin">
         <div class="inline-brand">
-          <div><img src="./images/brand.png" alt=""></div> <div><img class="button-login" src="./images/home.png" alt=""><a class="button-text" href="#">    Log In</a></div>
+          <div><img src="./images/brand.png" alt=""></div> 
+          <div class="div-button">
+            <img class="button-login" src="./images/home.png" alt=""><a class="button-text" href="#">    Log In</a>
+          </div>
         </div>
         <div class="capture-text">
           <h2 class="head_padding">Capture and Share <br> the World's Moments</h2>
