--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,30 +6,32 @@
   <title>Instagram</title>
 </head>
 <body>
-  <section class="caja1">
-
-  
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  </section>
+<section class="main-box">
   <div class="picture">
     <img src="./images/phones.png" alt="phones">
   </div>
-  <section class="main-text">
+  <div class="main-text">
     <div class="title">
       <img src="./images/brand.png" alt="brand">
-      <h1>Instagram</h1>
+      <button class="log-in">
+        <img src="./images/home.png" alt="home" class="home">
+        <value >Log in</value>
+      </button>
     </div>
+    <div>
+      <h2>Capture and Share the World's Moments</h2>
+
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+    
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    <div class="buttons">
+      <img src="./images/badge-iphone.png" alt="brand">
+      <img src="./images/badge-android.png" alt="brand">
+    </div>
+  </div>
   </section>
   <footer>
     <ul class="list">
