--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,7 +14,8 @@
         <div class="inline-brand">
           <div><img src="./images/brand.png" alt=""></div> 
           <div class="div-button">
-            <img class="button-login" src="./images/home.png" alt=""><a class="button-text" href="#">    Log In</a>
+            <img class="button-login" src="./images/home.png" alt="">
+            <div><a class="button-text" href="#">    Log In</a></div>            
           </div>
         </div>
         <div class="capture-text">
