--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
 <body>
-  Instagram
+    <div class="container">
 
-  Capture and Share the World's Moments
+  <div class="phone">
+  <img src="images/phones.png" alt="phones">
+  </div>
+  <div class="col-right">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <img src="images/brand.png" alt="instagram">
+  <button class="log-in" href="#" type="submit">
+    <img src="images/home.png" alt="home">
+    <p>Log in</p>
+  </button>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div class="text">
+  <h1>Capture and Share <br>the World's Moments</h1>
 
-  Oh yeah, did we mention it's free?
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <p>Oh yeah, did we mention it's free?</p>
 
-  &copy; 2014 Instagram
+  <a href="#"><img src="images/badge-iphone.png" alt="iphone"></a>
+  <a href="#"><img src="images/badge-android.png" alt="android"></a>
+  </div>
+</div>
+</div>
+
+  <footer>
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+    <li>&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 </body>
 </html>
