--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,56 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" type="text/css" href="css/main.css">
-<head>
-  <title>Instagram</title>
-</head>
-<body style="  background-image: url('images/bgtile.png'); background-repeat: repeat-x;">
-  <div class="mainContainer">
-  <div class="imgContainer">
-    <img src="images/phones.png" alt="images phone">
-  </div>
-  <div class="leftSide">
-  <div class="headContainer">
-    <img src="images/brand.png" alt="Instagram">
-    <div class="botonLog">
-      <p><img src="images/home.png" alt="home logo"> <strong> Login </strong></p></div>
-  </div>
-  <div class="textContainer">
-    <div>
-        <h2>  Capture and Share <br>the World's Moments</h2>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <head>
+    <title>Instagram</title>
+  </head>
+  <body
+    style="  background-image: url('images/bgtile.png'); background-repeat: repeat-x;"
+  >
+    <div class="mainContainer">
+      <div class="imgContainer">
+        <img src="images/phones.png" alt="images phone" />
+      </div>
+      <div class="leftSide">
+        <div class="headContainer">
+          <img src="images/brand.png" alt="Instagram" />
+          <div class="botonLog">
+            <p>
+              <img src="images/home.png" alt="home logo" />
+              <strong> Login </strong>
+            </p>
+          </div>
+        </div>
+        <div class="textContainer">
+          <div>
+            <h2>Capture and Share <br />the World's Moments</h2>
+          </div>
 
+          <div class="paragraphs">
+            <p>
+              Instagram is a <strong>fast</strong>,
+              <strong>beautiful</strong> and <strong>fun</strong> way to share
+              your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div>
+            <img
+              src="images/badge-iphone.png"
+              alt="Download on the App Store"
+              class="rightMargin30"
+            />
+            <img src="images/badge-android.png" alt="Get it on Google Play" />
+          </div>
+        </div>
+      </div>
     </div>
-  
- <div class="paragraphs">
-  <p>   Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
-  <p>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-  <p>  Oh yeah, did we mention it's free?</p>
 
-  </div>
-  <div>
-    <img src="images/badge-iphone.png" alt="Download on the App Store" class="rightMargin30">
-    <img src="images/badge-android.png" alt="Get it on Google Play">
-  </div>
- </div>
- </div>
-</div>
-
-<footer>
-  <ul>
-    <li>About Us</li>
-    <li>Support</li>
-    <li>Blog</li>
-    <li>Press</li>
-    <li>API</li>
-    <li>Jobs</li>
-    <li>Privacy</li>
-    <li>Terms</li>
-    <li>&copy; 2014 Instagram</li>
-  </ul>
-</footer>
-
-
-
-  
-</body>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
