--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <link rel="stylesheet" type="text/css" href="css/main.css" />
   <head>
-    <title>Instagram</title>
+    <title>Instagram - Rafa Boloñesa</title>
   </head>
   <body
     style="  background-image: url('images/bgtile.png'); background-repeat: repeat-x;"
