Done by José Nogueira

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div class="background">
+  <div class="main">
+    <img class="phones" src="./images/phones.png"/>
+    <div class="info">
+      <div class="log-in">
+        <img src="./images/brand.png" width="230px" height="60px"/>
+        <button type="button"><img src="./images/home.png" width="20px" height="15px"/>  Log in</button>
+      </div>
+      <div class="info-2">
+        <div class="paragraphs">
+          <h1>Capture and Share<br/>the World's Moments</h1>
+          <p>Instagram is a <b>fast, beautiful </b>and <b>fun</b>way
+          to share your life<br/>with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look<br/>and feel, then post to Instagram — it's that easy. 
+          You can<br/>even share to Facebook, Twitter, Tumblr and more, it's a<br/>new way
+          to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="apps">
+          <a href="#"><img src="./images/badge-iphone.png"/></a>
+          <a href="#"><img src="./images/badge-android.png"/></a>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="footer">
+    <ul>
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+    </ul>
+    <span>©2014 INSTAGRAM</span>
+  </div>
+</div>
 </body>
 </html>
