--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="fixed-background"></div>
+<div class="main-container flexbox-container">
 
-  Capture and Share the World's Moments
+  <div class="container flexbox-container">
+    <div class ="div-left">
+      <div class="mobile-frame">
+        <img src="images/phones.png" alt="Iphone and android phones">
+      </div>
+    </div> 
+    <div class ="div-right flexbox-container"> 
+    <div class="ribbon-up-container flexbox-container">
+      <div class="ribbon-up-item flexbox-container">
+      <h1><img src="images/brand.png" alt="Instagram brands"></h1>
+      </div>
+      <div class="ribbon-up-item log-in-button flexbox-container">
+          <button class="btn">
+            <img src="images/home.png" alt="house">Log In
+          </button>
+      </div>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="content">
+      <h2>Capture and Share the World's Moments</h2>
 
-  Oh yeah, did we mention it's free?
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <p>Oh yeah, did we mention it's free?</p>
+      <div class="badges-container">
+      <img src="images/badge-iphone.png" alt="">
+      <img src="images/badge-android.png" alt="">
+      </div>
+    </div>
+      </div>
+    </div>
 
-  &copy; 2014 Instagram
+    <menu class="down-menu">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li> <span class="copyright"> &copy; 2014 Instagram</span></li>
+      </ul>
+    </menu>
+
+  </div>
+</div>
 </body>
 </html>
